# New-summarizer

./: doc_app.py  pyproject.toml  update-lock.sh
documents_llm/: document.py  query.py  st_helpers.py  summarize.py
